--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 					<div class="hero-text">
 						<h1> One of the best site  </h1>
 						<h2> we know everything... </h2>
-						<h3> ... not like John Snow</h3>
+						<h3> ... not like John Snow..</h3>
 					</div>
 				
 				</div>
