--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		<link rel="stylesheet" href="style/css/style.css">
 	</head>
 	<body>
+		<p> online įvestas </p>
 		<section class="hero">
 			<div class="hero-overlay">
 				<div class="container flex-container">
